--- a/character-count/Cargo.toml
+++ b/character-count/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 
-name = "set_code_test"
+name = "character_count"
 version = "0.0.1"
 authors = ["matt <matthew.p.boyle@gmail.com>"]
 
 [[bin]]
-name="set_code_test"
+name="character_count"
